# sentinel-edr

./: CMakeLists.txt  README.md  REQUIREMENTS.md  sentinel.conf
akesoedr-agent/: CMakeLists.txt  config.cpp  config.h  crossvalidation.cpp  crossvalidation.h  event_processor.cpp  event_processor.h  json_writer.cpp  pipeline.cpp
akesoedr-agent/amsi/: amsi_integrity.cpp  amsi_integrity.h
akesoedr-agent/output/: siem_writer.cpp  siem_writer.h
akesoedr-agent/scanner/: av_scanner.cpp  av_scanner.h  edr_shim.cpp  edr_shim.h
akesoedr-drv/: CMakeLists.txt  callbacks_imageload.c  callbacks_process.c  callbacks_registry.c  main.c  minifilter.c  self_protect.c  self_protect.h
akesoedr-hook/: CMakeLists.txt  evasion_detect.c  evasion_detect.h  hook_engine.c  hook_engine.h  hook_integrity.c  hook_integrity.h  hooks_memory.c  hooks_process.c  hooks_section.c  hooks_thread.c  main.c
akesoedr-watchdog/: CMakeLists.txt  main.cpp
common/: constants.h  ipc.h  ipc_serialize.h  telemetry.h
rules/: hook_alloc_rwx.yaml  lsass_handle_spam.yaml  shellcode_runner.yaml
scripts/: hook_diag_test.cpp  install-driver.ps1  setup-testsigning.ps1  shellcode_test.cpp  uninstall-driver.ps1
sentinel-agent/: CMakeLists.txt  cmd_handler.cpp  cmd_handler.h  config.cpp  config.h  event_processor.cpp  event_processor.h  json_writer.cpp  json_writer.h  main.cpp  network_table.cpp  network_table.h  pipeline.cpp  pipeline.h  service.cpp  service.h
sentinel-agent/etw/: etw_consumer.cpp  etw_consumer.h  provider_amsi.cpp  provider_amsi.h  provider_dns.cpp  provider_dns.h  provider_dotnet.cpp  provider_dotnet.h  provider_kerberos.cpp  provider_kerberos.h  provider_kernelprocess.cpp  provider_kernelprocess.h  provider_powershell.cpp  provider_powershell.h  provider_rpc.cpp  provider_rpc.h
sentinel-agent/output/: siem_serializer.cpp  siem_serializer.h  siem_writer.cpp  siem_writer.h
sentinel-agent/rules/: rule_engine.h  rule_parser.cpp  rule_parser.h  rule_types.h  sequence_engine.cpp  sequence_engine.h
sentinel-agent/scanner/: memory_scanner.cpp  memory_scanner.h  onaccess_scanner.cpp  onaccess_scanner.h
sentinel-cli/: CMakeLists.txt  main.cpp
sentinel-drv/: CMakeLists.txt  callbacks_registry.c  callbacks_registry.h  file_hash.c  file_hash.h  main.c  minifilter.c  minifilter.h  minifilter_pipes.c  minifilter_pipes.h
sentinel-hook/: CMakeLists.txt  hook_engine.c  hook_engine.h  hooks_common.c  hooks_common.h  hooks_pipe.c  main.c
tests/: CMakeLists.txt  test_ipc_roundtrip.c
tests/payloads/: test_memscan.cpp
yara-rules/: cobaltstrike_beacon.yar  mimikatz.yar  suspicious_pe.yar  upx_packed.yar  xll_shellcode.yar
